--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,14 @@
             <artifactId>postgresql</artifactId>
             <version>42.3.2</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
