--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 path.to.avatars.folder= /avatars
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+server.port=8080
